<resources>
    <string name="app_name">Slide-Show</string>
    <string name="action_settings">Settings</string>
    <string name="app_logo_top">app_logo_top</string>


    <string name="productnamestring">Product Name</string>
    <string name="productquanitystring">Product Quanity</string>
    <string name="addstring">Add</string>
    <string name="findstring">Find</string>
    <string name="deletestring">Delete</string>
    <string name="prodid_string">Product ID</string>
    <string name="not_ass">Not assignned</string>
    <string name="prodname_string">Product Name</string>


    <string name="quanity_text">Product Quanity</string>
    <string name="add_string">Add</string>
    <string name="find_string">Find</string>
    <string name="delete_string">Delete</string>
    <string name="autoID_string">Automotive ID</string>
    <string name="auto_model_string">Automobile Model</string>
    <string name="model_quanity_string">Model Quanity</string>
    <string name="database_string">DataBase</string>
    <string name="internet_strings">Internet</string>


    <string name="telephone_string">Telephone Access</string>
    <string name="call_string">CALL</string>

    <string name="phone_string">Phone</string>
    <string name="telephone_strin">Telephone</string>
    <string name="sales_string">Sales Phone</string>
    <string name="Make_call_string">MAKE A CALL</string>
    <string name="phone_call_string">Phone</string>
    <string name="internet_access">Internet Access</string>
    <string name="internet_string">Internet Access</string>
    <string name="research_string">Auto Research</string>
    <string name="connect_string">Connect</string>
    <string name="fake_alarm_message">"---Customer Appointment 5 min ---"</string>


</resources>
